--- a/html/formulario.html
+++ b/html/formulario.html
@@ -53,14 +53,14 @@
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
                 </div>
 
-               
+
                 <button type="button" class="btn btn-primary botonformulario btn-lg">Enviar Formulario</button>
             </div>
 
 
     </form>
 
-    <script src="./JavaScript/main.js"></script>
+    <script src="../JavaScript/main.js"></script>
 
 
 
