--- a/html/formulario.html
+++ b/html/formulario.html
@@ -18,55 +18,82 @@
 </head>
 
 <body>
-
-
     <!-- navegador -->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
+            <a class="navbar-brand  titulo_navegador" href="../index.html">Inicio</a>
 
-            <a class="navbar-brand  titulo_navegador" href="../index.html">Formulario</a>
-            <button type="button" class="btn btn-primary boton_icono" data-bs-toggle="modal"
+            <button type="button" id="botonModal" class="btn btn-primary boton_icono" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
-                <img class="iconoCarrito" src="../imagenes/anadir-carrito.png" alt="">
+                <img class="iconoCarrito" src="/imagenes/anadir-carrito.png" alt="iconoCarrito">
+                <div class="numeroCarrito">
+                    <p id="carritoNumero"></p>
+                </div>
             </button>
+
+
         </div>
     </nav>
 
-    <form action="">
+
+    <form id="formulario">
         <div class="padre_formulario">
 
-
             <div class="hijo_formulario">
-
                 <h1 class="tituloFormulario">Contactanos</h1>
-                <div class="mb-3 input_formulario">
+                <div class="mb-3 input_formulario ">
 
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
-                </div>
-
-                <div class="mb-3 input_formulario">
-
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Numero">
+                    <input type="text" class="form-control" id="nombre" placeholder="Nombre" maxlength="12">
+                    <div class="formularioNombre"></div>
                 </div>
                 <div class="mb-3 input_formulario">
-
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                    <input type="tel" class="form-control" id="numero" placeholder="Numero" maxlength="9">
+                    <div class="formularioNumero"></div>
                 </div>
-
-
-                <button type="button" class="btn btn-primary botonformulario btn-lg">Enviar Formulario</button>
+                <div class="mb-3 input_formulario">
+                    <input type="email" class="form-control" id="email" placeholder="Email">
+                    <div class="formularioEmail"></div>
+                </div>
+                <button id="warning" type="submit" class="btn btn-primary botonformulario btn-lg">Enviar
+                    Formulario</button>
             </div>
 
 
     </form>
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Carrito de Compras</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="carritoTotal">
+                    <p class="precioCarrito" id="envioCostos">El carrito esta vacio</p>
+                </div>
+                <div class="carritoTotal">
+                    <p class="precioCarrito" id="precioTotal">El carrito esta vacio</p>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../JavaScript/formulario.js"></script>
     <script src="../JavaScript/main.js"></script>
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
