--- a/index.html
+++ b/index.html
@@ -13,41 +13,37 @@
 
 <body>
 
+
+
+
     <!-- navegador  -->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
 
             <a class="navbar-brand  titulo_navegador" href="/html/formulario.html">Formulario</a>
-            <button type="button" class="btn btn-primary boton_icono" data-bs-toggle="modal"
+
+            <button type="button" id="botonModal" class="btn btn-primary boton_icono" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
-                <img class="iconoCarrito" src="/imagenes/anadir-carrito.png" alt="">
+                <img class="iconoCarrito" src="/imagenes/anadir-carrito.png" alt="iconoCarrito">
+                <div class="numeroCarrito">
+                    <p id="carritoNumero"></p>
+                </div>
             </button>
+
         </div>
     </nav>
-
-
-
 
     <!-- cartas productos -->
 
     <h1 class="titulo" id="titulo">Nuestros Productos</h1>
     <div class="container text-center contenedor_cartas ">
         <div class="row" id="javacontenedor">
-
         </div>
-
     </div>
-    </div>
-    </div>
-
-
-
-
-
-    <!-- Button trigger modal -->
 
 
     <!-- Modal -->
+    <!-- carrito -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -56,34 +52,28 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-
                 </div>
-
-
                 <div class="carritoTotal">
-                    <p class="precioCarrito" id="envioCostos"></p>
+                    <p class="precioCarrito" id="envioCostos">El carrito esta vacio</p>
                 </div>
-
                 <div class="carritoTotal">
                     <p class="precioCarrito" id="precioTotal">El carrito esta vacio</p>
                 </div>
                 <div class="modal-footer">
-
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-
-
                 </div>
             </div>
         </div>
     </div>
+   
     <footer>
         <p class="textoEnvio"> con compras mayores a $15.000 el envio es gratis</p>
-
     </footer>
     <script src="JavaScript/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
