--- a/html/carrito.html
+++ b/html/carrito.html
@@ -6,21 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <meta name="description" content="Tienda de ropa vintage con envio a toda la argentina y local fisico en cordoba.">
+    <link rel="shortcut icon" type="image/png" href="imagenes/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="scss/estilos.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
+
+
 </head>
 
 <body>
-
-
-
-
-    <!-- navegador  -->
+    <!-- navegador -->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-
-            <a class="navbar-brand  titulo_navegador" href="/html/formulario.html">Formulario</a>
+            <a class="navbar-brand  titulo_navegador" href="../index.html">Inicio</a>
 
             <button type="button" id="botonModal" class="btn btn-primary boton_icono" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
@@ -30,20 +31,32 @@
                 </div>
             </button>
 
+
         </div>
     </nav>
 
-    <!-- cartas productos -->
+    <div class="contenedordelcarrito" id="carrera">
 
-    <h1 class="titulo" id="titulo">Nuestros Productos</h1>
-    <div class="container text-center contenedor_cartas ">
-        <div class="row" id="javacontenedor">
+    </div>
+    <div class="totalycomprar">
+
+        <p class="precioCarrito" id="precioTotal">El carrito esta vacio</p>
+        <button id="botonCarrito" type="submit" class="btn btn-primary botonformulario btn-lg">comprar</button>
+
+    </div>
+
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+            </div>
         </div>
     </div>
 
 
     <!-- Modal -->
-    <!-- carrito -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -60,20 +73,21 @@
                     <p class="precioCarrito" id="precioTotal">El carrito esta vacio</p>
                 </div>
                 <div class="modal-footer">
+
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary "> <a href="/html/carrito.html"> Comprar</a> </button>
+
                 </div>
+
             </div>
         </div>
     </div>
-
-    <footer>
-        <p class="textoEnvio"> con compras mayores a $15.000 el envio es gratis</p>
-    </footer>
-    <script src="JavaScript/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../JavaScript/formulario.js"></script>
+    <script src="../JavaScript/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+
 
 </body>
 
