--- a/html/formulario.html
+++ b/html/formulario.html
@@ -14,7 +14,6 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
 
-
 </head>
 
 <body>
@@ -31,11 +30,8 @@
                 </div>
             </button>
 
-
         </div>
     </nav>
-
-
     <form id="formulario">
         <div class="padre_formulario">
 
@@ -57,9 +53,15 @@
                 <button id="warning" type="submit" class="btn btn-primary botonformulario btn-lg">Enviar
                     Formulario</button>
             </div>
-
-
     </form>
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+            </div>
+        </div>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -80,6 +82,8 @@
                 <div class="modal-footer">
 
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary "> <a href="../html/carrito.html"> Comprar</a>
+                    </button>
                 </div>
 
             </div>
@@ -88,7 +92,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../JavaScript/formulario.js"></script>
     <script src="../JavaScript/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
