correccion de rutas

--- a/html/formulario.html
+++ b/html/formulario.html
@@ -24,7 +24,7 @@
 
             <button type="button" id="botonModal" class="btn btn-primary boton_icono" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
-                <img class="iconoCarrito" src="/imagenes/anadir-carrito.png" alt="iconoCarrito">
+                <img class="iconoCarrito" src="../imagenes/anadir-carrito.png" alt="iconoCarrito">
                 <div class="numeroCarrito">
                     <p id="carritoNumero"></p>
                 </div>
