--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
 
-            <a class="navbar-brand  titulo_navegador" href="/html/formulario.html">Formulario</a>
+            <a class="navbar-brand  titulo_navegador" href="html/formulario.html">Formulario</a>
 
             <button type="button" id="botonModal" class="btn btn-primary boton_icono" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
-                <img class="iconoCarrito" src="/imagenes/anadir-carrito.png" alt="iconoCarrito">
+                <img class="iconoCarrito" src="imagenes/anadir-carrito.png" alt="iconoCarrito">
                 <div class="numeroCarrito">
                     <p id="carritoNumero"></p>
                 </div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary "> <a href="/html/carrito.html"> Comprar</a> </button>
+                    <button type="button" class="btn btn-primary "> <a href="html/carrito.html"> Comprar</a> </button>
                 </div>
             </div>
         </div>
